# quickseries

./: .gitignore  README.md  environment.yml  pyproject.toml  setup.py
quickseries/: __init__.py  approximate.py  bases.py  benchmark.py  expansions.py  simplefit.py  sourceutils.py  sputils.py  strategize.py
quickseries/tests/: test_quickseries.py
